--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #
 
 # Site settings
-title: Spectral
+title: Trinh Vo Anh Thu
 description: |
   Another fine responsive  
   site template freebie  
